# HermesCompanion

./: .env.example  .gitignore  AGENT_MANIFEST.md  BACKLOG.md  HERMES_BRIEF.md  LICENSE  PROJECT_CONTEXT.md  PROJECT_STATUS_SUMMARY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  hermes_gateway_installation.md  hermes_gateway_integration.md  hermes_one_interface_prompt.md  live_run_aiogram3.md  nightly_attention_flow.md  nightly_git_checkpoint.md  proactive_foundation_phase0.md  runtime_state_store.md  vault_multi_writer_contract.md
examples/: telegram_message_update.json
integration/hermes_gateway/: companion_bridge.py
scripts/: nightly_git_checkpoint.py  run_nightly_git_checkpoint.ps1
src/tg_companion_bot/: __init__.py  attention_dispatcher.py  attention_items.py  callbacks.py  companion_envelope.py  delivery_outbox.py  hermes_gateway_adapter.py  live_adapter.py  (+14 more)
tests/: test_aiogram_config_assets.py  test_attention_dispatcher.py  test_attention_items.py  test_callbacks.py  test_companion_envelope.py  test_delivery_outbox.py  test_hermes_bridge_template.py  test_hermes_gateway_adapter.py  test_hermes_proactive_worker.py  test_interaction_profile.py  test_live_adapter.py  test_live_run_plan.py  test_live_runtime.py  test_nightly_attention_adapter.py  test_nightly_git_checkpoint.py  test_obsidian_persistence.py  test_packaging_assets.py  test_proactive_pipeline.py  test_proactive_runtime.py  test_rendering.py  test_runtime_state_store.py  test_smoke_cli.py  test_telegram_adapter_shell.py  test_telegram_framework_adapter.py
